--- a/head.html
+++ b/head.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light ">
       <div class="container-fluid menu">
-        <a class="navbar-brand" href="#top">Bob's Byggeri</a>
+        <a class="navbar-brand" href="index.html">Bob's Byggeri</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
