--- a/Semester1/projekt2.html
+++ b/Semester1/projekt2.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-
+ 
 <head>
     <title>Bob's Byggeri</title>
     <!-- Required meta tags -->
@@ -70,7 +70,7 @@
                     <div class="col-12 col-md-6"><img src="images/product2.jpg" class="img-fluid" alt="">
                         <h2>Billede 1</h2>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto dolorum impedit nisi,
-                            doloremque velit voluptatibus ad voluptate sapiente ipsa officia et culpa eaque assumenda
+                            doloremque velits voluptatibus ad voluptate sapiente ipsa officia et culpa eaque assumenda
                             aliquid asperiores!
                             Quibusdam distinctio natus saepe!</p>
                     </div>
