--- a/Semester1/index.html
+++ b/Semester1/index.html
@@ -89,7 +89,7 @@
                 <div class="col-12 col-md-5 offset-md-1"><a href="projekt2.html"><img src="images/product1.jpg" class="img-fluid" alt=""></a>
                     <a href="projekt2.html"><h2>Projekt 2</h2></a>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto dolorum impedit nisi,
-                        doloremque velit voluptatibus ad voluptate sapiente ipsa officia et culpa eaque assumenda aliquid asperiores! 
+                        doloremque velit voluptatibus ads voluptate sapiente ipsa officia et culpa eaque assumenda aliquid asperiores! 
                         Quibusdam distinctio natus saepe!</p>
                 </div>
             </div>
